fix like/dislike counter
also nostalgia logo now uses barlow instead of segoe ui due to Chaziz Consistency

--- a/private/templates/sbnext-desktop/watch.twig
+++ b/private/templates/sbnext-desktop/watch.twig
@@ -65,18 +65,18 @@
                         <div class="col-md-4 right">
                             <div>
                                 <button href="#" id="{% if log %}like{% else %}action_unlogged{% endif %}"
-                                        class="button {% if rating == 1 %}button-success{% else %}button-secondary-invis{% endif %}">
+                                        class="button {% if rating == 1 %}button-success{% else %}button-secondary{% endif %}">
                                     {{ icon("hand-thumbs-up-fill", 20) }}
-                                    {{ total_likes }}
+                                    <span id="likes">{{ total_likes }}</span>
                                 </button>
                                 <button href="#" id="{% if log %}dislike{% else %}action_unlogged{% endif %}"
-                                        class="button {% if rating is same as(0) %}button-danger{% else %}button-secondary-invis{% endif %}">
+                                        class="button {% if rating is same as(0) %}button-danger{% else %}button-secondary{% endif %}">
                                     {{ icon("hand-thumbs-down-fill", 20) }}
-                                    {{ total_dislikes }}
+                                    <span id="dislikes">{{ total_dislikes }}</span>
                                 </button>
                                 <button href="#" id="{% if log %}favorite{% else %}action_unlogged{% endif %}"
-                                        class="button {% if isFavorited %}button-warning{% else %}button-secondary-invis{% endif %}">
-                                    {{ icon("star", 20) }}
+                                        class="button {% if isFavorited %}button-warning{% else %}button-secondary{% endif %}">
+                                    {{ icon("star-fill", 20) }}
                                 </button>
                             </div>
                         </div>
@@ -88,8 +88,6 @@
                                         id="defaultOpen">{{ __("About") }}</button>
                                 <button class="tablinks"
                                         onclick="openTab(event, 'Stats')">{{ icon("bar-chart-fill", 12) }}</button>
-                                <button class="tablinks"
-                                        onclick="openTab(event, 'Flag')">{{ icon("flag-fill", 12) }}</button>
                             </div>
                         </div>
                     </div>
@@ -119,10 +117,6 @@
                                         {{ __("Most recent view:") }} {{ recentView | relative_time }}
                                     </li>
                                 </ul>
-                            </div>
-                            <div id="Flag" class="tabcontent" style="display: none;">
-                                <h2>{{ __("Flag this video") }}</h2>
-                                Uh yeah, that's gonna be done later.
                             </div>
                         </div>
                     </div>
