use jsdelivr for video.js

--- a/private/templates/sbnext-common/components/player.twig
+++ b/private/templates/sbnext-common/components/player.twig
@@ -5,8 +5,8 @@
         </div>
     {% else %}
         <!-- this is not the right location but i don't care -grkb 8/23/2022 -->
-        <script src="https://vjs.zencdn.net/7.20.2/video.min.js"></script>
-        <link href="https://vjs.zencdn.net/7.20.2/video-js.css" rel="stylesheet" />
+        <script src="https://cdn.jsdelivr.net/npm/video.js@7.20.2/dist/video.min.js" integrity="sha256-Val5EwMJw/DUOYKY9kjpCo3tLfUA/fPHWOkFHs9iKcs=" crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/video.js@7.20.2/dist/video-js.min.css" integrity="sha256-MQILNoDAnXbaJT0pfW0/qpj9a1UcHHUYKduMEqn0oa0=" crossorigin="anonymous">
         <video
                 id="sb-video"
                 class="video-js"
