--- a/private/templates/sbnext-common/components/player.twig
+++ b/private/templates/sbnext-common/components/player.twig
@@ -24,7 +24,7 @@
                 sourceOrder: true,
                 retryOnError: true,
                 aspectRatio: "16:9",
-                fluid: true,
+                fluid: false,
                 autoplay: true,
                 preload: "auto"
             });
